src/authorfinder/AuthorContentParser.py
# Generated from rules/AuthorContentParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class AuthorContentParser ( Parser ):

    grammarFileName = "AuthorContentParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'dev team'", "' for '", "'&'", "','", 
                     "'('", "')'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "''s idea'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'/*'", "'*/'", "'//'", "'--'", 
                     "'-'", "'\n'", "' '" ]

    symbolicNames = [ "<INVALID>", "DEVTEAM", "FOR", "AMPERSAND", "COMMA", 
                      "LPAR", "RPAR", "CT_AUTHOR1", "CT_AUTHOR2", "CT_AUTHOR3", 
                      "CT_AUTHOR4", "CT_AUTHOR5", "CT_AUTHOR6", "CT_THANKSTO", 
                      "CT_THANKS", "CT_IDEA", "CT_CREDIT1", "CT_CREDIT2", 
                      "CT_CLEANUP", "CM_BY", "COMMENT_OPEN", "COMMENT_CLOSE", 
                      "COMMENT_LINE1", "COMMENT_LINE2", "COMMENT_HYPN", 
                      "LINE_FEED", "WS", "IGNORE_SPACE", "IDENTIFIER" ]

    RULE_main = 0
    RULE_mainSpec = 1
    RULE_codeSpec = 2
    RULE_commentSpec = 3
    RULE_commentBlock = 4
    RULE_commentBlockSpec = 5
    RULE_out = 6
    RULE_commentByBlockSpec = 7
    RULE_commentByHeader = 8
    RULE_commentByHeaderSkip = 9
    RULE_commentByBody = 10
    RULE_commentByLine = 11
    RULE_commentLine = 12
    RULE_commentInlineSpec = 13
    RULE_author = 14
    RULE_contributor = 15
    RULE_patronNamesWrap = 16
    RULE_patronNames = 17
    RULE_patronName = 18
    RULE_patronAtomic = 19
    RULE_patronSingleton = 20
    RULE_patronAtomicSkip = 21
    RULE_patronCommentInternal = 22

    ruleNames =  [ "main", "mainSpec", "codeSpec", "commentSpec", "commentBlock", 
                   "commentBlockSpec", "out", "commentByBlockSpec", "commentByHeader", 
                   "commentByHeaderSkip", "commentByBody", "commentByLine", 
                   "commentLine", "commentInlineSpec", "author", "contributor", 
                   "patronNamesWrap", "patronNames", "patronName", "patronAtomic", 
                   "patronSingleton", "patronAtomicSkip", "patronCommentInternal" ]

    EOF = Token.EOF
    DEVTEAM=1
    FOR=2
    AMPERSAND=3
    COMMA=4
    LPAR=5
    RPAR=6
    CT_AUTHOR1=7
    CT_AUTHOR2=8
    CT_AUTHOR3=9
    CT_AUTHOR4=10
    CT_AUTHOR5=11
    CT_AUTHOR6=12
    CT_THANKSTO=13
    CT_THANKS=14
    CT_IDEA=15
    CT_CREDIT1=16
    CT_CREDIT2=17
    CT_CLEANUP=18
    CM_BY=19
    COMMENT_OPEN=20
    COMMENT_CLOSE=21
    COMMENT_LINE1=22
    COMMENT_LINE2=23
    COMMENT_HYPN=24
    LINE_FEED=25
    WS=26
    IGNORE_SPACE=27
    IDENTIFIER=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainSpec(self):
            return self.getTypedRuleContext(AuthorContentParser.MainSpecContext,0)


        def EOF(self):
            return self.getToken(AuthorContentParser.EOF, 0)

        def codeSpec(self):
            return self.getTypedRuleContext(AuthorContentParser.CodeSpecContext,0)


        def commentSpec(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentSpecContext,0)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = AuthorContentParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 46
                self.commentSpec()


            self.state = 49
            self.codeSpec()
            self.state = 51
            self.mainSpec()
            self.state = 52
            self.match(AuthorContentParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.CommentSpecContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.CommentSpecContext,i)


        def codeSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.CodeSpecContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.CodeSpecContext,i)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_mainSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainSpec" ):
                listener.enterMainSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainSpec" ):
                listener.exitMainSpec(self)




    def mainSpec(self):

        localctx = AuthorContentParser.MainSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 54
                    self.commentSpec()
                    self.state = 55
                    self.codeSpec()

                else:
                    raise NoViableAltException(self)
                self.state = 59 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodeSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(AuthorContentParser.COMMENT_OPEN)
            else:
                return self.getToken(AuthorContentParser.COMMENT_OPEN, i)

        def COMMENT_LINE1(self, i:int=None):
            if i is None:
                return self.getTokens(AuthorContentParser.COMMENT_LINE1)
            else:
                return self.getToken(AuthorContentParser.COMMENT_LINE1, i)

        def COMMENT_LINE2(self, i:int=None):
            if i is None:
                return self.getTokens(AuthorContentParser.COMMENT_LINE2)
            else:
                return self.getToken(AuthorContentParser.COMMENT_LINE2, i)

        def getRuleIndex(self):
            return AuthorContentParser.RULE_codeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeSpec" ):
                listener.enterCodeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeSpec" ):
                listener.exitCodeSpec(self)




    def codeSpec(self):

        localctx = AuthorContentParser.CodeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_codeSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AuthorContentParser.DEVTEAM) | (1 << AuthorContentParser.FOR) | (1 << AuthorContentParser.AMPERSAND) | (1 << AuthorContentParser.COMMA) | (1 << AuthorContentParser.LPAR) | (1 << AuthorContentParser.RPAR) | (1 << AuthorContentParser.CT_AUTHOR1) | (1 << AuthorContentParser.CT_AUTHOR2) | (1 << AuthorContentParser.CT_AUTHOR3) | (1 << AuthorContentParser.CT_AUTHOR4) | (1 << AuthorContentParser.CT_AUTHOR5) | (1 << AuthorContentParser.CT_AUTHOR6) | (1 << AuthorContentParser.CT_THANKSTO) | (1 << AuthorContentParser.CT_THANKS) | (1 << AuthorContentParser.CT_IDEA) | (1 << AuthorContentParser.CT_CREDIT1) | (1 << AuthorContentParser.CT_CREDIT2) | (1 << AuthorContentParser.CT_CLEANUP) | (1 << AuthorContentParser.CM_BY) | (1 << AuthorContentParser.COMMENT_CLOSE) | (1 << AuthorContentParser.COMMENT_HYPN) | (1 << AuthorContentParser.LINE_FEED) | (1 << AuthorContentParser.WS) | (1 << AuthorContentParser.IGNORE_SPACE) | (1 << AuthorContentParser.IDENTIFIER))) != 0):
                self.state = 61
                _la = self._input.LA(1)
                if _la <= 0 or (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AuthorContentParser.COMMENT_OPEN) | (1 << AuthorContentParser.COMMENT_LINE1) | (1 << AuthorContentParser.COMMENT_LINE2))) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentBlock(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentBlockContext,0)


        def commentLine(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentLineContext,0)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentSpec" ):
                listener.enterCommentSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentSpec" ):
                listener.exitCommentSpec(self)




    def commentSpec(self):

        localctx = AuthorContentParser.CommentSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_commentSpec)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AuthorContentParser.COMMENT_OPEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.commentBlock()
                pass
            elif token in [AuthorContentParser.COMMENT_LINE1, AuthorContentParser.COMMENT_LINE2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.commentLine()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT_OPEN(self):
            return self.getToken(AuthorContentParser.COMMENT_OPEN, 0)

        def COMMENT_CLOSE(self):
            return self.getToken(AuthorContentParser.COMMENT_CLOSE, 0)

        def commentBlockSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.CommentBlockSpecContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.CommentBlockSpecContext,i)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentBlock" ):
                listener.enterCommentBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentBlock" ):
                listener.exitCommentBlock(self)




    def commentBlock(self):

        localctx = AuthorContentParser.CommentBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_commentBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(AuthorContentParser.COMMENT_OPEN)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 72
                    self.commentBlockSpec() 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 78
            self.match(AuthorContentParser.COMMENT_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentBlockSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentByBlockSpec(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentByBlockSpecContext,0)


        def COMMENT_LINE2(self):
            return self.getToken(AuthorContentParser.COMMENT_LINE2, 0)

        def author(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.AuthorContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.AuthorContext,i)


        def contributor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.ContributorContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.ContributorContext,i)


        def LINE_FEED(self):
            return self.getToken(AuthorContentParser.LINE_FEED, 0)

        def out(self):
            return self.getTypedRuleContext(AuthorContentParser.OutContext,0)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentBlockSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentBlockSpec" ):
                listener.enterCommentBlockSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentBlockSpec" ):
                listener.exitCommentBlockSpec(self)




    def commentBlockSpec(self):

        localctx = AuthorContentParser.CommentBlockSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_commentBlockSpec)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.commentByBlockSpec()
                self.state = 81
                self.match(AuthorContentParser.COMMENT_LINE2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 85
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [AuthorContentParser.CT_AUTHOR1, AuthorContentParser.CT_AUTHOR2, AuthorContentParser.CT_AUTHOR3, AuthorContentParser.CT_AUTHOR4, AuthorContentParser.CT_AUTHOR5, AuthorContentParser.CT_AUTHOR6]:
                            self.state = 83
                            self.author()
                            pass
                        elif token in [AuthorContentParser.FOR, AuthorContentParser.AMPERSAND, AuthorContentParser.COMMA, AuthorContentParser.CT_THANKSTO, AuthorContentParser.CT_THANKS, AuthorContentParser.CT_IDEA, AuthorContentParser.CT_CREDIT1, AuthorContentParser.CT_CREDIT2, AuthorContentParser.CT_CLEANUP, AuthorContentParser.COMMENT_HYPN, AuthorContentParser.WS, AuthorContentParser.IDENTIFIER]:
                            self.state = 84
                            self.contributor()
                            pass
                        else:
                            raise NoViableAltException(self)


                    else:
                        raise NoViableAltException(self)
                    self.state = 87 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 90
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 89
                    self.match(AuthorContentParser.LINE_FEED)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.out()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AuthorContentParser.RULE_out

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOut" ):
                listener.enterOut(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOut" ):
                listener.exitOut(self)




    def out(self):

        localctx = AuthorContentParser.OutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_out)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.matchWildcard()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentByBlockSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentByHeader(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentByHeaderContext,0)


        def commentByBody(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentByBodyContext,0)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentByBlockSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentByBlockSpec" ):
                listener.enterCommentByBlockSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentByBlockSpec" ):
                listener.exitCommentByBlockSpec(self)




    def commentByBlockSpec(self):

        localctx = AuthorContentParser.CommentByBlockSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_commentByBlockSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.commentByHeader()
            self.state = 98
            self.commentByBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentByHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM_BY(self):
            return self.getToken(AuthorContentParser.CM_BY, 0)

        def commentByHeaderSkip(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentByHeaderSkipContext,0)


        def LINE_FEED(self):
            return self.getToken(AuthorContentParser.LINE_FEED, 0)

        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentByHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentByHeader" ):
                listener.enterCommentByHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentByHeader" ):
                listener.exitCommentByHeader(self)




    def commentByHeader(self):

        localctx = AuthorContentParser.CommentByHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_commentByHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(AuthorContentParser.CM_BY)
            self.state = 101
            self.commentByHeaderSkip()
            self.state = 102
            self.match(AuthorContentParser.LINE_FEED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentByHeaderSkipContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT_LINE2(self, i:int=None):
            if i is None:
                return self.getTokens(AuthorContentParser.COMMENT_LINE2)
            else:
                return self.getToken(AuthorContentParser.COMMENT_LINE2, i)

        def COMMENT_HYPN(self, i:int=None):
            if i is None:
                return self.getTokens(AuthorContentParser.COMMENT_HYPN)
            else:
                return self.getToken(AuthorContentParser.COMMENT_HYPN, i)

        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentByHeaderSkip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentByHeaderSkip" ):
                listener.enterCommentByHeaderSkip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentByHeaderSkip" ):
                listener.exitCommentByHeaderSkip(self)




    def commentByHeaderSkip(self):

        localctx = AuthorContentParser.CommentByHeaderSkipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_commentByHeaderSkip)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AuthorContentParser.COMMENT_LINE2 or _la==AuthorContentParser.COMMENT_HYPN:
                self.state = 104
                _la = self._input.LA(1)
                if not(_la==AuthorContentParser.COMMENT_LINE2 or _la==AuthorContentParser.COMMENT_HYPN):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentByBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentByLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.CommentByLineContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.CommentByLineContext,i)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentByBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentByBody" ):
                listener.enterCommentByBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentByBody" ):
                listener.exitCommentByBody(self)




    def commentByBody(self):

        localctx = AuthorContentParser.CommentByBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_commentByBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AuthorContentParser.FOR) | (1 << AuthorContentParser.AMPERSAND) | (1 << AuthorContentParser.COMMA) | (1 << AuthorContentParser.CM_BY) | (1 << AuthorContentParser.COMMENT_HYPN) | (1 << AuthorContentParser.LINE_FEED) | (1 << AuthorContentParser.WS) | (1 << AuthorContentParser.IDENTIFIER))) != 0):
                self.state = 110
                self.commentByLine()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentByLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def patronNamesWrap(self):
            return self.getTypedRuleContext(AuthorContentParser.PatronNamesWrapContext,0)


        def LINE_FEED(self):
            return self.getToken(AuthorContentParser.LINE_FEED, 0)

        def commentByHeader(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentByHeaderContext,0)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentByLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentByLine" ):
                listener.enterCommentByLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentByLine" ):
                listener.exitCommentByLine(self)




    def commentByLine(self):

        localctx = AuthorContentParser.CommentByLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_commentByLine)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.patronNamesWrap()
                self.state = 117
                self.match(AuthorContentParser.LINE_FEED)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.commentByHeader()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.patronNamesWrap()
                self.state = 121
                self.commentByHeader()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentInlineSpec(self):
            return self.getTypedRuleContext(AuthorContentParser.CommentInlineSpecContext,0)


        def LINE_FEED(self):
            return self.getToken(AuthorContentParser.LINE_FEED, 0)

        def COMMENT_LINE1(self):
            return self.getToken(AuthorContentParser.COMMENT_LINE1, 0)

        def COMMENT_LINE2(self):
            return self.getToken(AuthorContentParser.COMMENT_LINE2, 0)

        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentLine" ):
                listener.enterCommentLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentLine" ):
                listener.exitCommentLine(self)




    def commentLine(self):

        localctx = AuthorContentParser.CommentLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_commentLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not(_la==AuthorContentParser.COMMENT_LINE1 or _la==AuthorContentParser.COMMENT_LINE2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 126
            self.commentInlineSpec()
            self.state = 127
            self.match(AuthorContentParser.LINE_FEED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentInlineSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def author(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.AuthorContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.AuthorContext,i)


        def contributor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AuthorContentParser.ContributorContext)
            else:
                return self.getTypedRuleContext(AuthorContentParser.ContributorContext,i)


        def getRuleIndex(self):
            return AuthorContentParser.RULE_commentInlineSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentInlineSpec" ):
                listener.enterCommentInlineSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentInlineSpec" ):
                listener.exitCommentInlineSpec(self)




    def commentInlineSpec(self):

        localctx = AuthorContentParser.CommentInlineSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_commentInlineSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 132
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        self.state = 129
                        self.author()
                        pass

                    elif la_ == 2:
                        self.state = 130
                        self.contributor()
                        pass
